tests/baselines/reference/objectLitStructuralTypeMismatch.errors.txt
tests/cases/compiler/objectLitStructuralTypeMismatch.ts(2,5): error TS2322: Type '{ b: number; }' is not assignable to type '{ a: number; }'.
  Property 'b' does not exist on type '{ a: number; }'.


==== tests/cases/compiler/objectLitStructuralTypeMismatch.ts (1 errors) ====
    // Shouldn't compile
    var x: { a: number; } = { b: 5 };
        ~
!!! error TS2322: Type '{ b: number; }' is not assignable to type '{ a: number; }'.
!!! error TS2322:   Property 'b' does not exist on type '{ a: number; }'.